--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>  
     <meta charset="utf-8">  
     <title>  
-       NUEVAS PALMAS PLAN
+      Nuevas Palmas Plan
     </title>  
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">  
     <style>      
