Added team logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>  
 </head>  
 <body>  
-    <p> I'm Here!</p>
+    <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo">
 </body>  
 </html>     
 
