adjusted size of logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>  
 </head>  
 <body>  
-    <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo">
+    <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo" style = "width:400px;height:400px;">
 </body>  
 </html>     
 
