--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
       Nuevas Palmas Plan
     </title>  
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">  
-    <style>      
+    <style>
+        body {
+            background-color: #283890;
+        }
     </style>  
 </head>  
 <body>  
-    <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo" style = "width:400px;height:400px;">
+    <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo" style = "width:240px;height:300px;">
 </body>  
 </html>     
 
