--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">  
     <style>
         body {
-            background-color: #283890;
+            background-color: url('juicy.png');
         }
     </style>  
 </head>  
