--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <style>
         body {
             background-color: url('juicy.png');
+            filter: blur(8px);
+            background-position:center;
+            background-repeat:no repeat;
+            background-size:cover
         }
     </style>  
 </head>  
