--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">  
     <style>
         body {
-            background-color: url('juicy.png');
+            background-image: url('juicy.png');
             filter: blur(8px);
             background-position:center;
             background-repeat:no repeat;
