--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             background-repeat:no repeat;
             background-size:cover
         }
+        img {
+            
+        }
     </style>  
 
 </head>  
