--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
         img {
             
         }
+        h1 {
+           color: Red;
+           font-size: 26px;
+           padding: 4px;
+            
+        }
     </style>  
 
 </head>  
 <body>  
         <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo" style = "width:500px;height:400px;">
+     <h1> "Nuevas Palmas Project" </h1>
 </body>  
 </html>     
 
