adjusted h1 font family

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            color: Red;
            font-size: 26px;
            padding: 4px;
-            
+           font-family: "Gill Sans", sans-serif; 
         }
     </style>  
 
