--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         }
         h1 {
            color: Red;
-           font-size: 26px;
-           padding: 4px;
+           font-size: 46px;
+           padding: 10px;
            font-family: "Gill Sans", sans-serif; 
+           text-align: center: 
         }
     </style>  
 
