--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         }
         h1 {
            color: Red;
-           font-size: 46px;
+           font-size: 67px;
            padding: 10px;
            font-family: "Gill Sans", sans-serif; 
-           text-align: center: 
+           text-align: center; 
         }
     </style>  
 
