--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
            padding: 10px;
            font-family: "Gill Sans", sans-serif; 
            text-align: center; 
+           font-weight: normal;
+           text-decoration: underline;
         }
     </style>  
 
 </head>  
 <body>  
         <img src = "draild-removebg-preview.png" alt = "D-Rail-D logo" style = "width:300px;height:240px;">
-     <h1> "Nuevas Palmas Project" </h1>
+     <h1> Nuevas Palmas Project </h1>
 </body>  
 </html>     
 
