--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
         }
         h1 {
-           color: Red;
+           color: #47E93E;
            font-size: 67px;
            padding: 10px;
            font-family: "Gill Sans", sans-serif; 
